--- a/Index.html
+++ b/Index.html
@@ -57,7 +57,13 @@
 <br>
 <br>
 <br>
-
+<div class="cortinas" id="cortinas">
+    <h1>Cortinas</h1>
+    <br>
+    <br>
+    <br>
+    
+</div>
     <script src="personalizar.js"></script>
 </body>
 </html>
